<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <TextView
        android:id="@+id/archiveTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roboto"
        android:text="@string/archive_title"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/accent_text_size"
        android:transitionName="@string/category_title_transition_name"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/archiveNoWordsTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/archive_no_words_title"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordsArchiveRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/archiveTitleTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>