<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/editWordTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_word_title"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/accent_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <LinearLayout
        android:id="@+id/editWordTranslationsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/addWordTitleTextView"
        app:layout_constraintVertical_bias="0.4">

        <EditText
            android:id="@+id/editWordForeignEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/add_word_foreign_input_hint"
            android:inputType="textEmailAddress"
            android:minWidth="@dimen/input_min_width"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="@dimen/primary_text_size" />

        <EditText
            android:id="@+id/editWordNativeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/add_word_native_input_hint"
            android:inputType="textPassword"
            android:minWidth="@dimen/input_min_width"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="@dimen/primary_text_size" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/editWordContinueLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1">

        <ImageView
            android:id="@+id/editWordContinueImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:adjustViewBounds="true"
            android:background="@drawable/background_outline_primary"
            android:padding="@dimen/button_primary_padding"
            android:paddingStart="@dimen/button_accent_padding"
            android:paddingEnd="@dimen/button_accent_padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_add_word_white" />

        <TextView
            android:id="@+id/editWordContinueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/secondary_text_size" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <FrameLayout
        android:id="@+id/editWordCategoryOuterFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/editWordCategoryLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2">

        <TextView
            android:id="@+id/editWordCategoryTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_word_choose_category_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/primary_text_size" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <FrameLayout
            android:id="@+id/editWordCategoryFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>