<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/wordsCheckTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words_check_title"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/accent_text_size"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <LinearLayout
        android:id="@+id/wordsCheckTranslationsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/wordsCheckTitleTextView">

        <TextView
            android:id="@+id/wordsCheckNativeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/textview_primary_padding"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/primary_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/wordsCheckForeignUserAnswerFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/wordsCheckForeignUserAnswerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/words_check_foreign_input_hint"
                    android:inputType="textShortMessage"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorTextSecondary"
                    android:textSize="@dimen/primary_text_size" />
            </FrameLayout>

            <TextView
                android:id="@+id/wordsCheckForeignUserAnswerTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/textview_primary_padding"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/primary_text_size"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/wordsCheckForeignCorrectAnswerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/textview_primary_padding"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/primary_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordsCheckForeignUserAnswerEditText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wordsCheckWordActionsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/wordsCheckTranslationsLinearLayout"
        app:layout_constraintVertical_bias="0.39">

        <LinearLayout
            android:id="@+id/wordsCheckWordActionEditLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/imageview_size"
                android:layout_height="@dimen/imageview_size"
                app:srcCompat="@drawable/edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>

        <Space
            android:layout_width="48dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/wordsCheckWordActionDeleteLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/imageview_size"
                android:layout_height="@dimen/imageview_size"
                app:srcCompat="@drawable/trash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/secondary_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wordsCheckNextLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/wordsCheckWordActionsLinearLayout"
        app:layout_constraintVertical_bias="0.6">

        <ImageView
            android:id="@+id/wordsCheckNextImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:adjustViewBounds="true"
            android:background="@drawable/background_outline_primary"
            android:padding="@dimen/button_primary_padding"
            android:paddingStart="@dimen/button_accent_padding"
            android:paddingEnd="@dimen/button_accent_padding"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_arrow_small_white" />

        <TextView
            android:id="@+id/wordsCheckNextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/secondary_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wordsCheckContinueActionsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline1">

        <LinearLayout
            android:id="@+id/wordsCheckContinueLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wordsCheckContinueImageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:adjustViewBounds="true"
                android:background="@drawable/background_outline_primary"
                android:padding="@dimen/button_primary_padding"
                android:paddingStart="@dimen/button_accent_padding"
                android:paddingEnd="@dimen/button_accent_padding"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_arrow_small_white" />

            <TextView
                android:id="@+id/wordsCheckContinueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/secondary_text_size" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/wordsCheckForgotTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_outline_primary"
            android:gravity="center"
            android:padding="@dimen/textview_primary_padding"
            android:paddingStart="@dimen/textview_secondary_padding"
            android:paddingEnd="@dimen/textview_secondary_padding"
            android:text="@string/forgot"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/secondary_text_size" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <FrameLayout
        android:id="@+id/clickBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>